--- a/src/Components/container-Search-Info/navbar-Hamburger/navbarMenu.css
+++ b/src/Components/container-Search-Info/navbar-Hamburger/navbarMenu.css
@@ -25,7 +25,7 @@
 /*Hamburger menu*/
 .icon-item-hamburger{
     margin-top: 15px;
-    margin-left: -15px;
+    margin-left: -5px;
 }
 
 .item-hamburger{
@@ -36,6 +36,29 @@
     padding-top: 3px;
     margin-top:3px;
 }
+.item-hamburger-Active{
+   transform: scale(1.2);
+    transition: 1s;
+}
 
 
 /*-----------------------*/
+.container-direction{
+    margin-top: 10px;
+    margin-left: -30px;
+}
+
+.item-direction{
+    width: 20px;
+    height: 20px;
+    transform: rotate(0deg);
+    transition: 1s;
+
+}
+.item-direction-Active{
+    width: 20px;
+    height: 20px;
+    transform: rotate(180deg);
+    transition: 1s;
+
+}
