Am corectat erorile dela mihai

--- a/src/Components/blog-info/blog.css
+++ b/src/Components/blog-info/blog.css
@@ -1,6 +1,7 @@
 .title{
     display: flex;
     justify-content: center;
+    margin-top: 100px;
 }
 .rectangle{
     width: 80px;
@@ -28,7 +29,7 @@
     display: flex;
     margin-top:50px;
     border: none;
-    margin-left: 290px;
+    margin-left: 300px;
 }
 
 @media (max-width: 1000px) {
