--- a/src/Components/thumb-container/thumb-container.css
+++ b/src/Components/thumb-container/thumb-container.css
@@ -1,34 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-.containerTop{
-width: 1140px;
+.containerTop {
+    width: 1140px;
     height: 270px;
     display: flex;
+    margin-top: 20px;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.containerBottom{
+.containerBottom {
     width: 1140px;
     height: 263px;
     margin-top: 10px;
 }
 
-.container{
+.container {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.containerItems{
+.containerItems {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 100px;
     width: 1140px;
 
 }
 
-.juice{
+.juice {
     width: 60%;
     height: 300px;
     z-index: 5;
@@ -37,7 +39,7 @@ width: 1140px;
 }
 
 
-.button1{
+.button1 {
     width: 141px;
     height: 50px;
     background: #7FAD39;
@@ -50,45 +52,47 @@ width: 1140px;
     font-weight: 700;
 }
 
-.text1{
-margin-left: 23px;
+.text1 {
+    margin-left: 23px;
+    margin-top: 12px;
     cursor: pointer;
     color: white;
 
 }
 
-.text{
-margin-left: 280px;
+.text {
+    margin-left: 280px;
 }
 
-.pText{
+.pText {
     margin-top: 50px;
     font-size: 24px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     color: aliceblue;
 }
-.pText1{
+
+.pText1 {
     font-size: 16px;
     font-weight: 400;
     font-family: 'Montserrat', sans-serif;
     color: aliceblue;
 }
 
-.topContainer1{
+.topContainer1 {
     background: #F5F5F5;
     width: 270px;
     height: 250px;
     margin-top: 10px;
 }
 
-img{
+.img-ContainerItem {
     width: 250px;
     height: 185px;
     margin-left: 10px;
 }
 
-button{
+.btn-ContainerItem {
     border: none;
     width: 200px;
     height: 30px;
