Am adaugat containerul {container-product-categori}

--- a/src/Components/container-Search-Info/navbar-Phone-Call/phoneColl.css
+++ b/src/Components/container-Search-Info/navbar-Phone-Call/phoneColl.css
@@ -16,7 +16,7 @@
 }
 
 .icon-phone:hover {
-    background-color: #7FAD39;
+    background-color: #8abe3f;
     transform: scale(1.1);
     box-shadow: 0 0 5px 1px #7FAD39;
 }
